Style!: Fixes several layout issues. Mostly on the front page.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -83,9 +83,6 @@ table {
   th {
     font-weight: 700;
   }
-  tr {
-    border-bottom: 3px solid Theme.$secondaryGreen;
-  }
 }
 
 hr {
